fix: alignment on illustration

--- a/styles.less
+++ b/styles.less
@@ -57,12 +57,15 @@ body {
     margin: 6.125rem 0 0 0;
 
     aside {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
       height: calc(430px - 6.125rem);
       margin-bottom: 3rem;
 
       img {
         width: 13rem;
-        transform: translateX(5rem) translateY(-6.125rem);
+        transform: translateY(-6.125rem);
       }
     }
 
